--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
 <header>
     <h1>Un5eemly</h1>
+
 </header>
 
 <div class="content">
@@ -112,9 +113,9 @@
 
     <div class="social-links">
         <p>Follow me on:</p>
-        <a href="https://www.instagram.com/un5eemly" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/artistic_vinayak" target="_blank">Instagram</a>
         <a href="https://twitter.com/un5eemly" target="_blank">Twitter</a>
-        <a href="https://www.github.com/un5eemly" target="_blank">GitHub</a>
+        <a href="https://www.github.com/un-5eemly" target="_blank">GitHub</a>
     </div>
 </div>
 
