--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
 <body>
 
 <header>
-    <h1>Un5eemly</h1>
+    <h1>Portfolio</h1>
 
 </header>
 
 <div class="content">
     <h2>About Me</h2>
-    <p>Hi, I'm <strong>Un5eemly</strong>, also known as Vinayak Yadav. I'm a 15-year-old from India, passionate about technology, hacking, drawing, and gaming. I'm always exploring new ways to enhance my skills and create exciting projects.</p>
+    <p>Hi, My name is <strong>Vinayak Yadav</strong>. I'm a 15-year-old from India.</p>
     <div class="interests">
-        <span>Hacking</span>
+        <span>Linux</span>
         <span>Drawing</span>
         <span>Gaming</span>
     </div>
