--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Un5eemly - Personal Page</title>
+    <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="kali.png">
     <style>
@@ -118,8 +118,6 @@
         <a href="https://twitter.com/un5eemly" target="_blank">Twitter</a>
         <a href="https://www.github.com/un5eemly" target="_blank">GitHub</a>
     </div>
-</div>
-
 </div>
 
 </body>
