--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     <h2>About Me</h2>
     <p>Hi, My name is <strong>Vinayak Yadav</strong>. I'm a 15-year-old from India.</p>
     <div class="interests">
+         <h2> Intrests </h2>
+        <span>Technology</span>
         <span>Linux</span>
         <span>Drawing</span>
         <span>Gaming</span>
